[package]
name = "tui-bars"
description = "Bar widgets for tui-rs"
version = "0.1.0"
authors = ["Thore Goll <thoregoll@googlemail.com>"]
edition = "2021"
license-file = "LICENSE"
documentation = "https://docs.rs/tui-bars"
repository = "https://github.com/gollth/tui-bars"
keywords = ["tui", "widget"]
exclude = ["media/*", ".github"]

[dependencies]
ratatui = "0.24.0"

[dev-dependencies]
test-case = "3.1.0"
crossterm = "0.27.0"
itertools = "0.12.0"
